Changelog V1.420.69 To Shunt Good Lubkc

--- a/rename-this.ini
+++ b/rename-this.ini
@@ -15,16 +15,25 @@ asec = AUTH SECRET
 ; twitter username
 user = TWITTER USER
 [general]
-; chatting . old min 10800
+; need to add : media/subfolders for image posting
+speak_on_start = 0
+botname = Arai
+; chatting . old min 10800, old max 172800
 disability_awareness_min_time = 7200
-disability_awareness_max_time = 172800
+disability_awareness_max_time = 16800
+conversation_start_min_time = 1800
+conversation_start_max_time = 7200
 response_range = 2069
 def_response_target = 2043
 adj_response_target = 1801
 love_response_target = 1673
+love_ratio = 5
+mention_response_target = 973
 ; delineate with comma, no spaces
-loved_words=raccoon,slime,bug,grub,orb,wiggle,wiggly,fox,angry,possum,opossum,trash,panda,garbage,corgi,retard,adcat,penis,wheelchair,plinthmouth,orcish,goblin,shabby,demon,neopet,diablo,maplestory,burger,borger,buerger,berger,bubger,dumbass,idiot,cum,anger,boop,bouncy,bubbles,bunny,candy,cheeks,chocolate,clouds,cute,dokidoki,giggle,email,fantasy,fluffy,hair,hop,headphones,heartbeat,jump,jumpy,lipstick,kawaii,kiss,marshmallow,melody,milk,mouse,nibble,nightgown,papa,parfait,playground,poof,pout,puppy,swimsuit,shopping,skipping,socks,spinning,sticky,strawberry,sugar,summer,twirl,waterfall,valentine,vanilla
+loved_words=raccoon,slime,bug,grub,orb,orbs,slimes,slimy,raccoons,foxes,pandas,corgis,retarded,penises,burgers,borgers,burg,borg,grubs,possums,opossums,cummies,wiggle,wiggly,fox,angry,possum,opossum,trash,panda,garbage,corgi,retard,adcat,penis,wheelchair,plinthmouth,orcish,goblin,shabby,demon,neopet,diablo,maplestory,burger,borger,buerger,berger,bubger,dumbass,idiot,cum,anger,boop,bouncy,bubbles,bunny,candy,cheeks,chocolate,clouds,cute,dokidoki,giggle,email,fantasy,fluffy,hair,hop,headphones,heartbeat,jump,jumpy,lipstick,kawaii,kiss,marshmallow,melody,milk,mouse,nibble,nightgown,papa,parfait,playground,poof,pout,puppy,swimsuit,shopping,skipping,socks,spinning,sticky,strawberry,sugar,summer,twirl,waterfall,valentine,vanilla
 levels = 1
 chatdepth = 10000
 ;do not fuck with this unless you know what you're doing
 image_post_chance = 4
+negativity_init = 0
+negativity_max = 60
